--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>leaderboard</title>
       <script type="text/javascript" src = "java_script.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.1.1.min.js">
+  </head>
   </head>
   <body>
    <div class ="container-fluid">
