--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <title>leaderboard</title>
       <script type="text/javascript" src = "java_script.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.1.1.min.js">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   </head>
   </head>
   <body>
