--- a/marksheet.html
+++ b/marksheet.html
@@ -49,7 +49,7 @@
       <div class="row sheet ">
        <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-6 offset-lg-3 data" id = "data_list">
         
-
+<!-- 
         <div class="row data1">
            <div class="col-8 col-sm-8 name1">
              Anddybondy
@@ -58,7 +58,7 @@
              69(2)
            </div>
            <hr class = "l1">
-        </div>
+        </div> -->
 
 
        </div>
