--- a/marksheet.html
+++ b/marksheet.html
@@ -3,11 +3,12 @@
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta charset="utf-8">
-
+    <link rel="stylesheet" href="leaderboard.css">
     <link rel="stylesheet" href="marksheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>marksheet</title>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <div class ="container-fluid">
@@ -37,10 +38,10 @@
            </div>
          </div>
          <div class="row r2">
-           <div class="col-6 col-sm-6 day" id = "date">
+           <div class="col-6 col-sm-6 dayndate" id = "date">
              21 May
            </div>
-           <div class="col-6 col-sm-6 fm" id = "fmarks">
+           <div class="col-6 col-sm-6 fmarks" id = "fmarks">
              FM: 96
            </div>
          </div>
