--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-      <link rel="stylesheet" href="leaderboard.css">
+    <link rel="stylesheet" href="design.css">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>leaderboard</title>
@@ -14,22 +14,14 @@
   <body>
    <div class ="container-fluid">
      <div class="row">
-       <div class="col-sm-4 col-2 col-md-4">
-       </div>
-       <div  class="col-sm-4 col-8 col-md-4 hd">
-         MS30
-        <hr>
-       </div>
-       <div class="col-sm-4 col-2 col-md-4  ">
+       <div  class="col-12 hd">
+         <span>MS30</span>
        </div>
      </div>
      <div class="row">
-       <div class="col-sm-4 col-4 ">
+       <div class="col-12 lb">
+         Leaderboard
        </div>
-       <div class="col-sm-4 col-4 lb">
-         leaderboard
-       </div>
-       <div class="col-sm-4 col-4">
        </div>
      </div>
    </div>
