--- a/marksheet.html
+++ b/marksheet.html
@@ -3,8 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="leaderboard.css">
-    <link rel="stylesheet" href="marksheet.css">
+    <link rel="stylesheet" href="design.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>marksheet</title>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&display=swap" rel="stylesheet">
@@ -13,36 +12,30 @@
   <body>
     <div class ="container-fluid">
       <div class="row">
-        <div class="col-sm-4 col-2 col-md-4">
-        </div>
-        <div class="col-sm-4 col-8 col-md-4 hd">
-          MS30
-        </div>
-        <div class="col-sm-4 col-2 col-md-4  ">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-4 ">
-        </div>
-        <div class="col-sm-4 col-4 lb">
-          Marksheet
-        </div>
-        <div class="col-sm-4 col-4">
-        </div>
-      </div>
+       <div  class="col-12 hd">
+         <span>MS30</span>
+       </div>
+     </div>
+     <div class="row">
+       <div class="col-12 lb">
+         Leaderboard
+       </div>
+       </div>
+     </div>
+   </div>
       <div class="row">
         <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-6 offset-lg-3 main">
          <div class="row r1">
            <div class="col-sm-12 col-12 topic" id  = "title">
-             Hydrocarbon
+             Title
            </div>
          </div>
          <div class="row r2">
            <div class="col-6 col-sm-6 dayndate" id = "date">
-             21 May
+             -/--
            </div>
            <div class="col-6 col-sm-6 fmarks" id = "fmarks">
-             FM: 96
+             FM: --
            </div>
          </div>
         </div>
