--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="design.css">
+         <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>leaderboard</title>
@@ -15,7 +16,7 @@
    <div class ="container-fluid">
      <div class="row">
        <div  class="col-12 hd">
-         <span>MS30</span>
+        <a href="."><span>MS30</span></a>
        </div>
      </div>
      <div class="row">
