--- a/marksheet.html
+++ b/marksheet.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="design.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>marksheet</title>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <div class ="container-fluid">
       <div class="row">
        <div  class="col-12 hd">
-         <span>MS30</span>
+        <a href="."><span>MS30</span></a>
        </div>
      </div>
      <div class="row">
