--- a/s_test_index.html
+++ b/s_test_index.html
@@ -8,7 +8,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>leaderboard</title>
-      <script type="text/javascript" src = "java_script.js"></script>
+      <script type="text/javascript" src = "java_script_s_test.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   </head>
@@ -30,31 +30,6 @@
      <!-- leaderboard data start here -->
 
     <div class ="container-fluid" id = "div_id">
-<!--  -->
-      <a href = "./index_normal.html" ><div class="row"><!-- main box --><div class="col-10 offset-1 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 weekd"><div class="row r1 "><div id="d1" class="col-sm-8 col-8 day">
-          </div><div id="dt1" class="col-sm-4 col-4 date">
-          </div></div>
-        <div class="row r2 "><div id="t1" class="col-sm-9 col-9 topicname">
-            Foundation Batch
-          </div><div class="col-sm-3 col-3 fm"><div id="f1" class="fmi">
-            </div></div></div>
-        <div class="row r3"><div id="n1" class="col-md-6 col-9 name">
-            Regular Test Marks
-           </div><div id="m1" class="col-md-6 col-3 marks">
-           </div></div></div></div></a>
-<!--  -->
-<a href = "./s_test_index.html" ><div class="row"><!-- main box --><div class="col-10 offset-1 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 weekd"><div class="row r1 "><div id="d1" class="col-sm-8 col-8 day">
-          </div><div id="dt1" class="col-sm-4 col-4 date">
-          </div></div>
-        <div class="row r2 "><div id="t1" class="col-sm-9 col-9 topicname">
-            Foundation Batch
-          </div><div class="col-sm-3 col-3 fm"><div id="f1" class="fmi">
-            </div></div></div>
-        <div class="row r3"><div id="n1" class="col-md-6 col-9 name">
-            Chemistry Test Marks
-           </div><div id="m1" class="col-md-6 col-3 marks">
-           </div></div></div></div></a>
-<!--  -->
 
 </div>
  <div style="height: 200px; width: 100%"></div>
@@ -63,5 +38,9 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript">
+    update_leaderboard("div_id");
+</script>
+
 </body>
 </html>
